--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+  <color name="primaryColor">#76ff03</color>
+  <color name="primaryLightColor">#b0ff57</color>
+  <color name="primaryDarkColor">#32cb00</color>
+  <color name="secondaryColor">#c6ff00</color>
+  <color name="secondaryLightColor">#fdff58</color>
+  <color name="secondaryDarkColor">#90cc00</color>
+  <color name="primaryTextColor">#000000</color>
+  <color name="secondaryTextColor">#000000</color>
 </resources>
